add new "resetFx" action

--- a/docs/_data/sitemap.yml
+++ b/docs/_data/sitemap.yml
@@ -86,9 +86,10 @@ behaviours:
     - sticky
 actions:
     - index
-    - blink
-    - hide
-    - pulse
     - show
+    - hide
+    - resetfx
+    - blink
+    - pulse
     - scrollto
     - update
