--- a/docs/_data/sitemap.yml
+++ b/docs/_data/sitemap.yml
@@ -33,8 +33,8 @@ components:
     - countdown
     - datepicker
     - dock
-    - filterbtns
-    - flipbtns
+    - filterbuttons
+    - flipbuttons
     - flyout
     - form
     - headings
@@ -48,11 +48,11 @@ components:
     - maxchars
     - modal
     - note
-    - pagebtns
+    - pagebuttons
     - pagedots
     - pagerewind
     - pagination
-    - pickbtn
+    - pickbutton
     - piechart
     - popover
     - pricesticker
