--- a/docs/_data/sitemap.yml
+++ b/docs/_data/sitemap.yml
@@ -56,6 +56,7 @@ components:
     - popover
     - pricesticker
     - quotation
+    - radiobutton
     - rangeinput
     - rating
     - ratinginput
