update page navigation components (pageprogress, pagerewind, pageskim)
renamed scrollprogress to pageprogress and scrollkeys to pageskim

--- a/docs/_data/sitemap.yml
+++ b/docs/_data/sitemap.yml
@@ -59,15 +59,15 @@ components:
     - note
     - pagebuttons
     - pagedots
+    - pageprogress
     - pagerewind
+    - pageskim
     - pagination
     - popover
     - quotation
     - radiobutton
     - rangeinput
     - ruler
-    - scrollkeys
-    - scrollprogress
     - searchinput
     - select
     - slider
