change "behaviour" to "behavior"

--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "install-gems": "cd docs && gem install bundler && bundle install",
     "build": "npm run clean && npm run build-scripts && npm run build-styles && npm run copy && npm run build-jekyll",
     "build-jekyll": "npm run copy-docs && cd docs && bundle exec jekyll serve --config _config.yml --open",
-    "build-scripts": "uglifyjs src/js/yoi.js src/js/behaviours/*.js src/js/actions/*.js src/js/modules/*.js src/components/**/*.js --source-map-inline --beautify -o dist/js/yoi.js && npm run copy-scripts",
+    "build-scripts": "uglifyjs src/js/yoi.js src/js/behaviors/*.js src/js/actions/*.js src/js/modules/*.js src/components/**/*.js --source-map-inline --beautify -o dist/js/yoi.js && npm run copy-scripts",
     "build-styles": "npm run styles-compile --source-map-map-inline && npm run styles-process && npm run copy-styles",
     "styles-process": "postcss -u autoprefixer -b 'last 2 versions, not dead, > 1%, ie >= 11' dist/css/yoi.css -o dist/css/yoi.css --no-map",
     "styles-compress": "postcss -u cssnano -o dist/css/yoi.css dist/css/yoi.css --no-map",
@@ -34,7 +34,7 @@
     "copy-docs": "cp src/components/**/*.md docs/_pages/components",
     "publish": "npm run clean && npm run publish-scripts && npm run publish-styles && npm run copy && npm run publish-jekyll",
     "publish-jekyll": "npm run copy-docs && cd docs && JEKYLL_ENV=production bundle exec jekyll build --config _config.yml",
-    "publish-scripts": "uglifyjs src/js/yoi.js src/js/behaviours/*.js src/js/actions/*.js src/js/modules/*.js src/components/**/*.js --compress -o dist/js/yoi.js && npm run copy-scripts",
+    "publish-scripts": "uglifyjs src/js/yoi.js src/js/behaviors/*.js src/js/actions/*.js src/js/modules/*.js src/components/**/*.js --compress -o dist/js/yoi.js && npm run copy-scripts",
     "publish-styles": "npm run styles-compile && npm run styles-process && npm run styles-compress && npm run copy-styles",
     "watch-docs": "chokidar 'src/components/**/*.md' -c 'npm run copy-docs'",
     "watch-scripts": "chokidar 'src/js/**/*' 'src/components/**/*.js' -c 'npm run build-scripts'",
