--- a/docs/_data/sitemap.yml
+++ b/docs/_data/sitemap.yml
@@ -20,7 +20,7 @@ utilities:
     - transition
     - typography
     - visibility
-behaviours:
+behaviors:
     - index
     - dismiss
     - lazyload
